--- a/src/css/header.css
+++ b/src/css/header.css
@@ -9,7 +9,7 @@
     }
     .header-container-img-logo{
         position:relative;
-        transform: translate(20px, 25px);
+        transform: translate(30px, 45px);
         width: 140px;
         height: 55px;
     }
@@ -38,6 +38,20 @@
         width: 250px;
         height: 70px;
     }
+    .img-juice{
+        z-index: 5;
+        width: 78px;
+        height: 95px;
+    }
+    .container-img-juice{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+        transform: translate(-250px);
+    }
 }
 @media only screen and  (min-width: 900px) and (max-width: 1079px) {
     header {
@@ -46,7 +60,7 @@
     }
     .header-container-img-logo{
         position:relative;
-        transform: translate(20px, 25px);
+        transform: translate(30px, 45px);
         width: 95px;
         height: 38px;
     }
@@ -75,6 +89,20 @@
         width: 180px;
         height: 50px;
     }
+    .img-juice{
+        z-index: 5;
+        width: 78px;
+        height: 95px;
+    }
+    .container-img-juice{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+        transform: translate(-150px);
+    }
 }
 @media only screen and  (min-width: 650px) and (max-width: 899px) {
     header {
@@ -83,7 +111,7 @@
     }
     .header-container-img-logo{
         position:relative;
-        transform: translate(20px, 25px);
+        transform: translate(30px, 45px);
         width: 80px;
         height: 30px;
     }
@@ -112,6 +140,20 @@
         width: 160px;
         height: 40px;
     }
+    .img-juice{
+        z-index: 5;
+        width: 58px;
+        height: 75px;
+    }
+    .container-img-juice{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+        transform: translate(-110px);
+    }
 }
 @media only screen and  (min-width: 550px) and (max-width: 649px) {
     header {
@@ -120,7 +162,7 @@
     }
     .header-container-img-logo{
         position:relative;
-        transform: translate(20px, 25px);
+        transform: translate(30px, 45px);
         width: 70px;
         height: 25px;
     }
@@ -148,6 +190,20 @@
         margin-top: 40px;
         width: 140px;
         height: 33px;
+    }
+    .img-juice{
+        z-index: 5;
+        width: 42px;
+        height: 55px;
+    }
+    .container-img-juice{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+        transform: translate(-90px);
     }
 }
 @media only screen and  (min-width: 410px) and (max-width: 549px) {
@@ -185,6 +241,20 @@
         margin-top: 40px;
         width: 130px;
         height: 30px;
+    }
+    .img-juice{
+        z-index: 5;
+        width: 37px;
+        height: 45px;
+    }
+    .container-img-juice{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+        transform: translate(-60px);
     }
 }
 @media only screen and  (min-width: 340px) and (max-width: 409px) {
@@ -228,6 +298,20 @@
         width: 78px;
         height: 95px;
     }  
+    .img-juice{
+        z-index: 5;
+        width: 30px;
+        height: 38px;
+    }
+    .container-img-juice{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+        transform: translate(-40px);
+    }
 }
 @media only screen and  (min-width: 250px) and (max-width: 339px) {
     header {
