--- a/src/css/smallTeam.css
+++ b/src/css/smallTeam.css
@@ -1,6 +1,6 @@
 @media only screen and  (min-width: 1200px) and (max-width:  1800px) {
     .small-team{
-        height: 1170px;
+        height: 1350px;
         text-align: center;
         background-color: rgb(253, 253, 253);
     }
@@ -18,14 +18,185 @@
         margin-top: 100px;
         grid-column-gap: 50px;
         grid-row-gap: 50px;
+        z-index: 30;
+    }
+
+    .small-team-img-2-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(455px, -750px);
+    }
+
+    .small-team-img-1-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(35px, -750px);
+    }
+
+    .small-team-img-3-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(875px, -750px);
+    }
+
+    .small-team-img-4-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(35px, -260px);
+    }
+
+    .small-team-img-5-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(455px, -260px);
+    }
+
+    .small-team-img-6-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(875px, -260px);
+    }
     
+    .small-team-img-1-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+
+    .small-team-img-2-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);
+    }
+    .small-team-img-3-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+    .small-team-img-4-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+    .small-team-img-5-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
+    }
+
+    .small-team-img-6-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
+    }
+
+    .small-team-container-img:hover .small-team-img-1-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-2-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-3-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-4-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-5-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-6-comment
+    {
+        display: block;
+    } 
+
+    .small-team-icon-pinter{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-twiter{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-facebook{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-facebook-copy{
+        width: 16px;
+        height: 16px;
     }
 }
 @media only screen and  (min-width: 1000px) and (max-width:  1199px) {
     
     .small-team{
         margin-top: 590px;
-        height: 1500px;
+        height: 1760px;
         text-align: center;
         background-color: rgb(250, 250, 250);
     }
@@ -43,7 +214,177 @@
         margin-top: 100px;
         grid-column-gap: 35px;
         grid-row-gap: 35px;
+    }
+
+    .small-team-img-1-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(35px, -1200px);
+    }
+
+    .small-team-img-2-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(440px, -1200px);
+    }
+
+    .small-team-img-3-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(35px, -725px);
+    }
+
+    .small-team-img-4-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(440px, -725px);
+    }
+
+    .small-team-img-5-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(35px, -250px);
+    }
+
+    .small-team-img-6-comment{
+        z-index: 37;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        display: none;
+        border-radius: 5%;
+        transform: translate(440px, -250px);
+    }
     
+    .small-team-img-1-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+
+    .small-team-img-2-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);
+    }
+    .small-team-img-3-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+    .small-team-img-4-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+    .small-team-img-5-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
+    }
+
+    .small-team-img-6-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
+    }
+
+    .small-team-container-img:hover .small-team-img-1-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-2-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-3-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-4-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-5-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-6-comment
+    {
+        display: block;
+    } 
+
+    .small-team-icon-pinter{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-twiter{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-facebook{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-facebook-copy{
+        width: 16px;
+        height: 16px;
     }
 }
 @media only screen and  (min-width: 930px) and (max-width:  999px) {
@@ -68,6 +409,212 @@
         grid-column-gap: 35px;
         grid-row-gap: 35px;
     
+    }
+
+    .small-team-img-1{
+        margin-right: 12px;
+        z-index: 35;
+    }
+    .small-team-img-2{
+        margin-right: 12px;
+        z-index: 35;
+    }
+    .small-team-img-3{
+        margin-right: 13px;
+        z-index: 35;
+    }
+    .small-team-img-4{
+        margin-right: 12px;
+        margin-top: 9px;
+        z-index: 35;
+    }
+    .small-team-img-5{
+        margin-right: 12px;
+        margin-top: 9px;
+        z-index: 35;
+    }
+
+    .small-team-img-6{
+        margin-right: 12px;
+        margin-top: 9px;
+        z-index: 35;
+    }
+
+    .small-team-img-2-comment{
+        z-index: 30;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        position: absolute;
+        transform: translate(560px, -680px);
+        display: none;
+        border-radius: 5%;
+    }
+
+    .small-team-img-1-comment{
+        z-index: 30;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        position: absolute;
+        transform: translate(170px, -680px);
+        display: none;
+        border-radius: 5%;
+    }
+
+    .small-team-img-3-comment{
+        z-index: 30;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        position: absolute;
+        transform: translate(945px, -680px);
+        display: none;
+        border-radius: 5%;
+    }
+
+    .small-team-img-4-comment{
+        z-index: 30;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        position: absolute;
+        transform: translate(170px, -225px);
+        display: none;
+        border-radius: 5%;
+    }
+
+    .small-team-img-5-comment{
+        z-index: 30;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        position: absolute;
+        transform: translate(560px, -225px);
+        display: none;
+        border-radius: 5%;
+    }
+
+    .small-team-img-6-comment{
+        z-index: 30;
+        width: 300px;
+        height: 200px;
+        background: rgb(163, 246, 235);
+        position: absolute;
+        transform: translate(945px, -225px);
+        display: none;
+        border-radius: 5%;
+    }
+    
+    .small-team-img-1-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+
+    .small-team-img-2-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);
+    }
+    .small-team-img-3-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+    .small-team-img-4-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
+    }
+    .small-team-img-5-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
+    }
+
+    .small-team-img-6-comment:after {
+        transform: rotate(45deg);
+        content: ' '; 
+        position: absolute; 
+        width: 10px; 
+        height: 10px; 
+        top: -15px;
+        right: 245px;
+        border: 15px solid; 
+        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
+    }
+
+    .small-team-container-img:hover .small-team-img-1-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-2-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-3-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-4-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-5-comment
+    {
+        display: block;
+    } 
+    .small-team-container-img:hover .small-team-img-6-comment
+    {
+        display: block;
+    } 
+
+    .small-team-icon-pinter{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-twiter{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-facebook{
+        width: 16px;
+        height: 16px;
+    }
+    .small-team-icon-facebook-copy{
+        width: 16px;
+        height: 16px;
     }
 }
 @media only screen and  (min-width: 800px) and (max-width:  929px) {
@@ -125,10 +672,50 @@
         margin-right: 10px;
     }
 }
-@media only screen and  (min-width: 400px) and (max-width:  649px) {
+@media only screen and  (min-width: 540px) and (max-width:  649px) {
     
     .small-team{
-        height: 1500px;
+        height: 700px;
+        text-align: center;
+        background-color: rgb(250, 250, 250);
+    }
+
+    .text-font-merriweather-little{
+        color: rgba(0, 0, 0, 0.62);
+        text-transform: uppercase;
+        font-weight: bold;
+        font-family: 'Merriweather', serif;
+        font-size: 8px;
+        line-height: 10px;
+        letter-spacing: 0px;
+    }
+    
+    .small-team-container-text{
+        margin-top: 50px;
+        line-height: 10px;
+        display: inline-block;
+        position: relative;
+    }
+    
+    .small-team-container-img{
+        margin-top: 80px;
+        justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .team-img{
+        height: 220px;
+        width: 170px;
+        margin-bottom: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
+@media only screen and  (min-width: 400px) and (max-width:  539px) {
+    
+    .small-team{
+        height: 900px;
         text-align: center;
         background-color: rgb(250, 250, 250);
     }
@@ -168,7 +755,7 @@
 @media only screen and  (min-width: 350px) and (max-width:  399px) {
     
     .small-team{
-        height: 1500px;
+        height: 800px;
         text-align: center;
         background-color: rgb(250, 250, 250);
     }
@@ -191,7 +778,7 @@
     }
     
     .small-team-container-img{
-        margin-top: 80px;
+        margin-top: 60px;
         justify-content: center;
         display: flex;
         flex-wrap: wrap;
@@ -205,3 +792,4 @@
         margin-right: 5px;
     }
 }
+
