--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,6 +4,7 @@
         height: 315px;
         width: 100%;
         background-color: rgb(44, 47, 50);
+        margin-top: -18px;
     }
 
     .footer_icon-container{
