--- a/src/css/aboutUs.css
+++ b/src/css/aboutUs.css
@@ -18,17 +18,15 @@
     }
 
     .about-us__main-content{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         justify-content: center;
-        align-items: center;
-        column-gap: 150px; 
+        column-gap: 115px;
     }
-
+      
     .about-us__image{
         position: relative;
-        left: 20px;
+        left: 205px;
     }
 
     .about-us__text-merriweather{
@@ -61,7 +59,7 @@
     }
 
     .top-right-text-header{
-        margin-top: -43px;
+        margin-top: 25px;
         font-size: 20px;
         line-height: 1.3;
         letter-spacing: 1.1px;
