--- a/src/css/smallTeam.css
+++ b/src/css/smallTeam.css
@@ -9,6 +9,7 @@
         display: inline-block;
         position: relative;
         bottom: 30px;
+        margin-bottom: 91px;
     }
 
     .small-team__text-montserrat{
@@ -19,7 +20,6 @@
         font-family: 'Montserrat', sans-serif;
         font-size: 38px;
         margin-top: 124px;
-        margin-bottom: -15px;
     }
 
     .small-team__text-merriweather{
@@ -31,14 +31,15 @@
         letter-spacing: 0.3px;
     }
     
-    .test{
-        height: 450px;
+    .height-content{
+        height: 454px;
     }
     
     .small-team_content {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        justify-items:center;
+        grid-template-columns: repeat(3, 0.1fr);
+        justify-items: center;
+        column-gap: 15px;
     }
     
     .small-team_container {
@@ -47,21 +48,32 @@
     .small-team__text-merriweather {
         text-align: center;
         font-family: 'Merriweather', serif;
+        font-size: 17.9px;
+        font-weight: bold;
+        color: rgba(39, 39, 39, 0.949);
+        margin-top: 10px;
+    }
+
+    .small-team__text-merriweather-bubble {
+        text-align: center;
+        font-family: 'Merriweather', serif;
         font-size: 20px;
         font-weight: bold;
         color: rgba(39, 39, 39, 0.949);
-        margin-top: 30px;
+        margin-top: 35px;
+        margin-bottom: 25px;
     }
     
     .small-team__text-merriweather-italic{
         text-align: center;
         font-family: 'Merriweather', serif;
         font-style:italic;
+        font-size: 16px;
         color: rgba(39, 39, 39, 0.3);
     }
     
     .small-team__text-raleway {
-        font-size: 16px;
+        font-size: 17.5px;
         font-family: "Raleway";
         text-align: left;
         color: rgba(0, 0, 0, 0.8);
@@ -69,7 +81,7 @@
       
     .small-team_icon {
         position: relative;
-        padding: 20px 160px 0px 0px;
+        padding: 40px 150px 0px 0px;
     }
     
     .small-team__btn {
@@ -88,6 +100,10 @@
         border-color: rgb(109, 246, 235) transparent transparent rgb(109, 246, 235); 
         margin-right: 280px;
         margin-top: -10px;
+    }
+
+    ul{
+        margin: 0px 0px 0px 150px;
     }
       
     li {
@@ -109,604 +125,5 @@
         left: 20px;
       }
 }
-@media only screen and  (min-width: 1000px) and (max-width:  1399px) {
-    
-    .small-team{
-        margin-top: 590px;
-        height: 1760px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        display: grid;
-        grid-template-columns: repeat(2, 0.2fr);
-        justify-content: center;
-        margin-top: 100px;
-        grid-column-gap: 35px;
-        grid-row-gap: 35px;
-    }
 
-    .small-team-img-1-comment{
-        z-index: 37;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        display: none;
-        border-radius: 5%;
-        transform: translate(35px, -1200px);
-    }
-
-    .small-team-img-2-comment{
-        z-index: 37;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        display: none;
-        border-radius: 5%;
-        transform: translate(440px, -1200px);
-    }
-
-    .small-team-img-3-comment{
-        z-index: 37;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        display: none;
-        border-radius: 5%;
-        transform: translate(35px, -725px);
-    }
-
-    .small-team-img-4-comment{
-        z-index: 37;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        display: none;
-        border-radius: 5%;
-        transform: translate(440px, -725px);
-    }
-
-    .small-team-img-5-comment{
-        z-index: 37;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        display: none;
-        border-radius: 5%;
-        transform: translate(35px, -250px);
-    }
-
-    .small-team-img-6-comment{
-        z-index: 37;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        display: none;
-        border-radius: 5%;
-        transform: translate(440px, -250px);
-    }
-    
-    .small-team-img-1-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
-    }
-
-    .small-team-img-2-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);
-    }
-    .small-team-img-3-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
-    }
-    .small-team-img-4-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
-    }
-    .small-team-img-5-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
-    }
-
-    .small-team-img-6-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
-    }
-
-    .small-team-container-img:hover .small-team-img-1-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-2-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-3-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-4-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-5-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-6-comment
-    {
-        display: block;
-    } 
-
-    .small-team-icon-pinter{
-        width: 16px;
-        height: 16px;
-    }
-    .small-team-icon-twiter{
-        width: 16px;
-        height: 16px;
-    }
-    .small-team-icon-facebook{
-        width: 16px;
-        height: 16px;
-    }
-    .small-team-icon-facebook-copy{
-        width: 16px;
-        height: 16px;
-    }
-}
-@media only screen and  (min-width: 930px) and (max-width:  999px) {
-    
-    .small-team{
-        height: 1500px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        display: grid;
-        grid-template-columns: repeat(2, 0.2fr);
-        justify-content: center;
-        margin-top: 100px;
-        grid-column-gap: 35px;
-        grid-row-gap: 35px;
-    
-    }
-
-    .small-team-img-1{
-        margin-right: 12px;
-        z-index: 35;
-    }
-    .small-team-img-2{
-        margin-right: 12px;
-        z-index: 35;
-    }
-    .small-team-img-3{
-        margin-right: 13px;
-        z-index: 35;
-    }
-    .small-team-img-4{
-        margin-right: 12px;
-        margin-top: 9px;
-        z-index: 35;
-    }
-    .small-team-img-5{
-        margin-right: 12px;
-        margin-top: 9px;
-        z-index: 35;
-    }
-
-    .small-team-img-6{
-        margin-right: 12px;
-        margin-top: 9px;
-        z-index: 35;
-    }
-
-    .small-team-img-2-comment{
-        z-index: 30;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        position: absolute;
-        transform: translate(560px, -680px);
-        display: none;
-        border-radius: 5%;
-    }
-
-    .small-team-img-1-comment{
-        z-index: 30;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        position: absolute;
-        transform: translate(170px, -680px);
-        display: none;
-        border-radius: 5%;
-    }
-
-    .small-team-img-3-comment{
-        z-index: 30;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        position: absolute;
-        transform: translate(945px, -680px);
-        display: none;
-        border-radius: 5%;
-    }
-
-    .small-team-img-4-comment{
-        z-index: 30;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        position: absolute;
-        transform: translate(170px, -225px);
-        display: none;
-        border-radius: 5%;
-    }
-
-    .small-team-img-5-comment{
-        z-index: 30;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        position: absolute;
-        transform: translate(560px, -225px);
-        display: none;
-        border-radius: 5%;
-    }
-
-    .small-team-img-6-comment{
-        z-index: 30;
-        width: 300px;
-        height: 200px;
-        background: rgb(163, 246, 235);
-        position: absolute;
-        transform: translate(945px, -225px);
-        display: none;
-        border-radius: 5%;
-    }
-    
-    .small-team-img-1-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
-    }
-
-    .small-team-img-2-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);
-    }
-    .small-team-img-3-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
-    }
-    .small-team-img-4-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235); 
-    }
-    .small-team-img-5-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
-    }
-
-    .small-team-img-6-comment:after {
-        transform: rotate(45deg);
-        content: ' '; 
-        position: absolute; 
-        width: 10px; 
-        height: 10px; 
-        top: -15px;
-        right: 245px;
-        border: 15px solid; 
-        border-color: rgb(163, 246, 235) transparent transparent rgb(163, 246, 235);; 
-    }
-
-    .small-team-container-img:hover .small-team-img-1-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-2-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-3-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-4-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-5-comment
-    {
-        display: block;
-    } 
-    .small-team-container-img:hover .small-team-img-6-comment
-    {
-        display: block;
-    } 
-
-    .small-team-icon-pinter{
-        width: 16px;
-        height: 16px;
-    }
-    .small-team-icon-twiter{
-        width: 16px;
-        height: 16px;
-    }
-    .small-team-icon-facebook{
-        width: 16px;
-        height: 16px;
-    }
-    .small-team-icon-facebook-copy{
-        width: 16px;
-        height: 16px;
-    }
-}
-@media only screen and  (min-width: 800px) and (max-width:  929px) {
-    
-    .small-team{
-        margin-top: 150px;
-        height: 1500px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        display: grid;
-        grid-template-columns: repeat(2, 0.2fr);
-        justify-content: center;
-        margin-top: 100px;
-        grid-column-gap: 35px;
-        grid-row-gap: 35px;
-    
-    }
-}
-@media only screen and  (min-width: 650px) and (max-width:  799px) {
-    
-    .small-team{
-        margin-top: 150px;
-        height: 1500px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        margin-top: 80px;
-        justify-content: center;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .team-img{
-        height: 380px;
-        width: 300px;
-        margin-bottom: 20px;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-}
-@media only screen and  (min-width: 540px) and (max-width:  649px) {
-    
-    .small-team{
-        height: 700px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-
-    .text-font-merriweather-little{
-        color: rgba(0, 0, 0, 0.62);
-        text-transform: uppercase;
-        font-weight: bold;
-        font-family: 'Merriweather', serif;
-        font-size: 8px;
-        line-height: 10px;
-        letter-spacing: 0px;
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        line-height: 10px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        margin-top: 80px;
-        justify-content: center;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .team-img{
-        height: 220px;
-        width: 170px;
-        margin-bottom: 10px;
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-}
-@media only screen and  (min-width: 400px) and (max-width:  539px) {
-    
-    .small-team{
-        height: 900px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-
-    .text-font-merriweather-little{
-        color: rgba(0, 0, 0, 0.62);
-        text-transform: uppercase;
-        font-weight: bold;
-        font-family: 'Merriweather', serif;
-        font-size: 8px;
-        line-height: 10px;
-        letter-spacing: 0px;
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        line-height: 10px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        margin-top: 80px;
-        justify-content: center;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .team-img{
-        height: 220px;
-        width: 170px;
-        margin-bottom: 10px;
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-}
-@media only screen and  (min-width: 350px) and (max-width:  399px) {
-    
-    .small-team{
-        height: 800px;
-        text-align: center;
-        background-color: rgb(250, 250, 250);
-    }
-
-    .text-font-merriweather-little{
-        color: rgba(0, 0, 0, 0.62);
-        text-transform: uppercase;
-        font-weight: bold;
-        font-family: 'Merriweather', serif;
-        font-size: 8px;
-        line-height: 10px;
-        letter-spacing: 0px;
-    }
-    
-    .small-team-container-text{
-        margin-top: 50px;
-        line-height: 10px;
-        display: inline-block;
-        position: relative;
-    }
-    
-    .small-team-container-img{
-        margin-top: 60px;
-        justify-content: center;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .team-img{
-        height: 180px;
-        width: 140px;
-        margin-bottom: 10px;
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-}
 
